Toggle bugs: focus and multiline alignment

--- a/ui/app/styles/components/toggle.scss
+++ b/ui/app/styles/components/toggle.scss
@@ -20,6 +20,7 @@ $size: 10px;
 
   .toggler {
     display: inline-block;
+    position: relative;
     width: $size * 2;
     height: $size;
     border-radius: $size;
@@ -35,8 +36,8 @@ $size: 10px;
       border-radius: 100%;
       background: $white;
       left: 2px;
-      top: 50%;
-      transform: translate(0, -50%);
+      top: 1px;
+      transform: translateX(0);
       transition: transform 0.3s ease-in-out;
     }
   }
@@ -44,7 +45,7 @@ $size: 10px;
   // Always style the toggler based off the input state to
   // ensure that the native input is driving behavior.
   .input:focus + .toggler {
-    box-shadow: inset 0 0 0 2px rgba($blue, 0.5);
+    box-shadow: 0 0 0 1px $grey-light;
     outline: none;
   }
 
@@ -52,12 +53,12 @@ $size: 10px;
     background: $blue;
 
     &::after {
-      transform: translate(100%, -50%);
+      transform: translateX(100%);
     }
   }
 
   .input:checked:focus + .toggler {
-    box-shadow: inset 0 0 0 2px rgba($white, 0.5);
+    box-shadow: 0 0 0 1px rgba($blue, 0.5);
   }
 
   .input:disabled + .toggler {
